# secure-data-capsule-apis

./: .gitignore  Cargo.toml  README.md  build.rs  check.sh  pom.xml  protoc.py
.circleci/: config.yml
.github/workflows/: cla.yml  trigger-circleci.yml
python/: MANIFEST.in  Makefile  README.md  __init__.py  _version.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
secretflowapis/v1/: common.proto  status.proto
secretflowapis/v1/sdc/: core.proto  digital_envelope.proto
secretflowapis/v1/sdc/authmanager/: auth_manager.proto
secretflowapis/v1/sdc/dataagent/: data_agent.proto
secretflowapis/v1/sdc/teeapps/: tee_task_params.proto
secretflowapis/v2/: common.proto  status.proto
secretflowapis/v2/sdc/: jwt.proto  ual.proto
secretflowapis/v2/sdc/capsule_manager/: capsule_manager.proto
secretflowapis/v2/sdc/data_capsule_proxy/: data_capsule_proxy.proto
secretflowapis/v2/sdc/ra_proxy/: ra_proxy.proto
secretflowapis/v2/teeapps/: task_config.proto
