[package]
name = "sdc_apis"
version = "0.2.1-dev20240222"
edition = "2021"
description = "SecretFlow Data Capsule apis proto generated Rust"
readme = "README.md"
repository = "https://github.com/secretflow/secure-data-capsule-apis.git"
license-file = "LICENSE"
include = ["secretflowapis", "lib.rs", "build.rs"]


[lib]
name = "sdc_apis"   
path = "lib.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11"
prost-types = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
prost-wkt = "0.4"
prost-wkt-types = "0.4"

[build-dependencies]
tonic-build = "0.9.2"
prost-wkt-build = "0.4"

